--- a/index.html
+++ b/index.html
@@ -1,44 +1,41 @@
-  <!DOCTYPE html>
-  <html>
-
-  <head>
-    <title>Mooc Finder | 网课答案查询 | Yukino's 理想乡</title>
+<html><head>
+    <title>网课答案查询 | 网课答案查询 | Mygirl 理想乡</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--Import Google Icon Font-->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/material-design-icons/3.0.0/iconfont/material-icons.css">
     <!--Import materialize.css-->
     <link rel="stylesheet" href="css/app.css">
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
     <link rel="stylesheet" href="css/APlayer.min.css">
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
   </head>
 
-  <body>
+  <body class="">
     <main>
       <div class="container">
         <div class="row">
           <div class="col l8 offset-l2 s10 offset-s1">
-            <h3 class="center-align mouse-pointer" onclick="timeJump()">Mooc Finder</h3>
+            <h3 class="center-align mouse-pointer" onclick="timeJump()">网课查题</h3>
           </div>
           <div class="col l8 offset-l2 s10 offset-s1">
             <form id="searchForm" onsubmit="searchAnwser();">
               <div class="row search-row">
                 <div class="col s12">
                   <label>
-                    <input id="rad-zhihuishu" name="group1" type="radio" value="8787" checked />
+                    <input id="rad-zhihuishu" name="group1" type="radio" value="8787" checked="">
                     <span>智慧树/知到</span>
                   </label>
                   <label>
-                    <input id="rad-chaoxing" name="group1" type="radio" value="8728" />
+                    <input id="rad-chaoxing" name="group1" type="radio" value="8728">
                     <span>超星/尔雅/学习通</span>
                   </label>
                 </div>
                 <div class="col s12">
                   <div class="card hoverable">
-                    <input id="input-name" name="name" type="text" class="search-input" placeholder="输入问题,我告诉你答案">
+                    <input id="input-name" name="name" type="text" class="search-input" placeholder="输入问题,键入回车我告诉你答案">
                   </div>
                 </div>
               </div>
@@ -60,7 +57,7 @@
                       <div class="indeterminate"></div>
                   </div>
               </div>
-              <!-- 这里添加内容 -->
+              <!-- 这里添加内容 --> 
               <div class="col s12">
                   <div class="answer-content">
                       <div class="answer-item-temple card card-style hidden">
@@ -77,33 +74,49 @@
             </div>
           </div>
         </div>
-      </div>
+      </div><center>
+	<p>点击回车键后秒出答案</p>
+<b id="/">QQ:1138698898</b><br>
+<b id="/">建议收藏网站，后续更新更多小玩意</b><br>
+	<b id="">市面上唯一的纯手工代看（招代理）
+校园合伙人招募中！</b><br><b id="nr">QQ：1138698898</b><br>
+
+
         <!-- Modal Structure -->
-  <div id="modal1" class="modal">
+  <div id="modal1" class="modal" tabindex="0">
+	  
     <div class="modal-content">
       <h4>请我喝可乐</h4>
       <h6>没有什么不是一瓶可乐解决不了的事情！</h6>
       <h6>谢谢 ( ＞ω＜) </h6>
-      <img class="cola-img" src="https://yukino.nos-eastchina1.126.net/QQ20191205-0.jpg" alt="">
+      <img  class="cola-img" src="./img/sfk.jpg" alt="">
+	  <img  class="cola-img" src="./img/jhy.jpg" alt="">
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">完事</a>
     </div>
   </div>
-  <div id="aplayer"></div>
-    </main>
+
+
+
+
     <footer class="page-footer footer-style">
       <div>
-      	<p class="center-align"><span id="busuanzi_container_site_pv">你是第<span id="busuanzi_value_site_pv"></span>位访客</span</p>
-        <p class="center-align"><a class="black-text" target="_blank" href="https://yukino.co/">Yukino</a>｜<a target="_blank" class="black-text" href="https://github.com/YukiCoco/MoocFinder">开源地址</a>｜<a class="black-text modal-trigger"  href="#modal1">请我喝可乐</a></p>
+      	<p class="center-align"><span id="busuanzi_container_site_pv" style="display: inline;">你是第<span id="busuanzi_value_site_pv">409</span>位访客
+        </span></p><p class="center-align"><a class="black-text" target="_blank" href="tencent://message/?uin=1138698898&Site=&Menu=yes">作者摆摊</a>
+		
+		｜
+		<a class="black-text modal-trigger" href="#moda2">代刷网课</a>｜<a class="black-text modal-trigger" href="#modal1">请我喝可乐</a>
+		
+	
       </div>
       </footer>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="js/APlayer.min.js"></script>
-    <script src="js/app.js"></script>
-    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-  </body>
+    <script src="https://mooc.yukino.co/js/app.js"></script>
+    <script async="" src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+  
 
-  </html>
+  </body></html>
